# rust-wasm-vanilla-example

./: Cargo.toml  index.html
src/: main.rs
