[package]
name = "ex02-rust-web-basics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1"
futures = "0.3"
leptos = "0.0.19"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
	"Window",
	"Document",
	"Element",
	"HtmlElement",
	"Node",
	"MouseEvent",
] }
